Home page tablet responsive styles

--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -1,6 +1,6 @@
 <form class="contact-form">
   <hgroup>
-    <h2>Send us a message</h2>
+    <h2>Get in Touch</h2>
   </hgroup>
 
   <div class="field">
@@ -11,7 +11,7 @@
     <label for="contact-phone">Phone</label>
     <input type="tel" id="contact-phone" name="phone" />
   </div>
-  <div class="field">
+  <div class="field radio-buttons">
     <label for="contact-service">Type of Request</label>
     <input type="radio" name="service-type" value="residential" />Residential
     <input type="radio" name="service-type" value="commercial" />Commercial
