--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,6 +29,7 @@
   </div>
 </header>
 <script type="text/javascript">
+  //scroll
   var sh = $(".site-header");
       shs = "site-header-scrolled";
       headerHeight = $('.site-header').height();
@@ -40,5 +41,4 @@
       sh.removeClass(shs);
     }
   });
-
 </script>
