--- a/_includes/why_choose_us.html
+++ b/_includes/why_choose_us.html
@@ -22,11 +22,11 @@
   </ul>
 
   <footer class="choose-us-footer group">
-    <div class="camera-text">
-      <i class="icon-camera"></i>
+    <i class="icon-camera"></i>
+    <div class="detail-text">
+      <h3>The Details Make The Difference</h3>
       <p>
-        If you need a repair, we’ll often have you send us a picture of the issue so that we can try to match the parts we’ll need.<br/>
-        That's just one of the many ways that we make sure the job gets done right the first time.
+        If you need a repair, we’ll often have you send us a picture of the issue so that we can try to match the parts we’ll need. Just one of the many ways that we make sure the job gets done right the first time.
       </p>
     </div>
   </footer>
