--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,1 +1,75 @@
 // Site Header
+
+body {
+  padding-top: 160px;
+}
+.site-header {
+  @include transition(all, 200ms, linear);
+  @include box-shadow(0px, 0px, 0px, $white);
+  background: $white;
+  height: 160px;
+  left: 0;
+  position: fixed;
+  right: 0;
+  top: 0;
+  width: 100%;
+  z-index: 99;
+}
+
+// sticky nav
+.site-header-scrolled {
+  @include box-shadow(0px, 1px, 6px, $darkGrey);
+  height: 60px;
+  .top-nav {
+    opacity: 0;
+    height: 0;
+    pointer-events: none;
+  }
+  .main-nav-logo {
+    bottom: -18px;
+    width: 200px;
+  }
+}
+
+//main container
+.main-nav-bar {
+  font-size: 18px;
+  position: relative;
+  z-index: 5;
+}
+
+// top nav
+.top-nav {
+  @include transition(all, 100ms, linear);
+  display: block;
+  height: 90px;
+  opacity: 1;
+  width: 100%;
+}
+.top-nav-left,
+.top-nav-right {
+  float: left;
+  width: 50%;
+  margin: 0;
+  height: 100%;
+}
+.banner {
+  width: 300px;
+  padding: 1em .5em;
+}
+.top-nav-right {
+  text-align: right;
+}
+.top-nav-phone {
+  color: $gold;
+  float: right;
+  font-size: 2em;
+  font-weight: bold;
+  letter-spacing: 2px;
+  margin-right: 2%;
+  padding-top: .5em;
+  &:hover {
+    color: $gold;
+    text-decoration: none;
+  }
+}
