--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,9 +12,11 @@
         <i class="icon-cc-amex"></i>
       </div>
     </div>
-    <div class="span1-3 licensing">
-      <img src="/images/licensed.png">
-      <img src="/images/bbb.png">
+    <div class="span1-3">
+      <div class="licensing">
+        <img src="/images/licensed.png" class="license-seal">
+        <img src="/images/bbb.png" class="bbb">
+      </div>
     </div>
     <div class="span1-3 footer-phone">
       <div class="desktoptel">
