--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -83,7 +83,11 @@
   top: -50px;
   width: 75%;
   z-index: 1;
-  @include media-query($breakpoint-tablet) { height: 650px; }
+  @include media-query($breakpoint-tablet) {
+    height: 650px;
+    width: 80%;
+    left: 10%; 
+  }
   hgroup {
     margin-bottom: 2em;
     text-align: center;
