--- a/_sass/_form.scss
+++ b/_sass/_form.scss
@@ -44,6 +44,7 @@ input[type="submit"] {
 
 input[type="radio"] {
   margin-right: 1em;
+  cursor: pointer;
 }
 .radio-buttons input {
   &:last-child {
