Industry section responsive

--- a/_includes/service_areas.html
+++ b/_includes/service_areas.html
@@ -6,7 +6,7 @@
   <div class="span1-2">
     <h1>Service Areas</h1>
     <p>Centrally located in beautiful Webster Groves, Linek Plumbing provides service to St. Louis City, St. Louis County, St. Charles County, Jefferson County, and more:</p>
-    <div class="span1-2">
+    <div class="service-area-list">
       <ul>
         <li>Affton</li>
         <li>Ballwin</li>
@@ -22,6 +22,10 @@
         <li>Fenton</li>
         <li>Ferguson</li>
         <li>Florissant</li>
+      </ul>
+    </div>
+    <div class="service-area-list">
+      <ul>
         <li>Frontenac</li>
         <li>Glendale</li>
         <li>Grantwood Village</li>
@@ -29,10 +33,6 @@
         <li>Huntleigh</li>
         <li>Kirkwood</li>
         <li>Ladue</li>
-      </ul>
-    </div>
-    <div class="span1-2">
-      <ul>
         <li>Manchester</li>
         <li>Maplewood</li>
         <li>Maryland Heights</li>
@@ -40,6 +40,10 @@
         <li>Northwoods</li>
         <li>Oakland</li>
         <li>Olivette</li>
+      </ul>
+    </div>
+    <div class="service-area-list">
+      <ul>
         <li>Overland</li>
         <li>Richmond Heights</li>
         <li>Rock Hill</li>
