--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -42,11 +42,12 @@
     left: 0;
     bottom: -20px;
     transform: none;
+    width: 200px;
   }
 
   @include media-query($breakpoint-mobile) {
     width: 160px;
-    bottom: -40px;
+    bottom: -20px;
   }
 }
 
@@ -55,14 +56,30 @@
   font-size: 1.2em;
   color: $grey;
   display: none;
-
   @include media-query($breakpoint-mobile) {
     display: block;
   }
 }
 
-.mobile-nav-close {
-  display: none;
+//burger
+.mobile-nav-launcher {
+  &.burger {
+    @include burger($grey);
+    float: right;
+    height: 60px;
+    width: 2em;
+    &.active {
+      span {
+        background: transparent !important;
+        &:before {
+          @include transform(rotate(45deg) translate(5px, 6px));
+        }
+        &:after {
+          @include transform(rotate(-45deg) translate(5px, -6px));
+        }
+      }
+    }
+  }
 }
 
 // tablet and mobile nav
@@ -78,10 +95,16 @@
   }
 }
 
-@media screen and (max-width: 415px) {
+@media screen and (max-width: 735px) {
+  .main-nav-items li a {
+    font-size: .98em;
+  }
+}
+
+@include media-query($breakpoint-mobile) {
   .main-nav {
     float: none;
-    padding: 6%;
+    padding: $header-height 6% 0;
     width: 100%;
     position: fixed;
     top: 0;
@@ -90,15 +113,10 @@
     bottom: 0;
     background: $white;
     display: none;
-
-    &.show {
+    &.active {
       display: block;
+      z-index: -1;
     }
-  }
-
-  .mobile-nav-close {
-    display: block;
-    float: right;
   }
 
   .main-nav-items {
@@ -115,7 +133,7 @@
 
     a {
       display: block;
-      width: 100%;
+      width: 50%;
       text-align: left;
       padding: 3%;
       margin: 3%;
