More subpage responsiveness

--- a/_includes/service_areas.html
+++ b/_includes/service_areas.html
@@ -5,7 +5,7 @@
   </div>
   <div class="span1-2">
     <h1>Service Areas</h1>
-    <p>Centrally located in beautiful Webster Groves, Linek Plumbing provides service to St. Louis City, St. Louis County, St. Charles County, Jefferson County, and more:</p>
+    <p>Centrally located in beautiful Webster Groves, Linek Plumbing provides service to St. Louis City, St. Louis County, St. Charles County, Jefferson County, and more</p>
     <div class="service-area-list">
       <ul>
         <li>Affton</li>
