--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -157,9 +157,16 @@
     text-align: center;
     font-size: 1.5em;
     text-transform: uppercase;
+    width: 28.66%;
+    margin: 0 2%;
+    float: left;
+    @include media-query($breakpoint-mobile) {
+      width: 46%;
+    }
     img {
-      @include media-query($breakpoint-tablet) {
-        max-width: 150px;
+      max-width: 100%;
+      @include media-query($breakpoint-mobile) {
+        max-width: 100px;
       }
     }
   }
@@ -280,4 +287,7 @@
   float: left;
   width: 28.66%;
   font-size: .8em;
+  @include media-query($breakpoint-mobile) {
+    display: none;
+  }
 }
