--- a/_includes/services_overview.html
+++ b/_includes/services_overview.html
@@ -7,29 +7,27 @@
   </div>
 
   <div class="group">
-    <div class="span1-3 service-cell with-divider">
+    <div class="service-cell with-divider">
       <img src="/images/service-icons/repairs.png" alt="Repairs" title="Repairs" />
       <h3>Repairs</h3>
     </div>
-    <div class="span1-3 service-cell with-divider">
+    <div class="service-cell with-divider">
       <img src="/images/service-icons/remodeling.png" alt="Remodeling" title="Remodeling" />
       <h3>Remodeling</h3>
     </div>
-    <div class="span1-3 service-cell with-divider">
+    <div class="service-cell with-divider">
       <img src="/images/service-icons/water-heaters.png" alt="Water Heaters" title="Water Heaters" />
       <h3>Water Heaters</h3>
     </div>
-  </div>
-  <div class="group">
-    <div class="span1-3 service-cell">
+    <div class="service-cell with-divider">
       <img src="/images/service-icons/service-repairs.png" alt="Water Service Repairs" title="Water Service Repairs" />
       <h3>Water Service<br />Repairs</h3>
     </div>
-    <div class="span1-3 service-cell">
+    <div class="service-cell">
       <img src="/images/service-icons/backflow.png" alt="Backflow Preventers" title="Backflow Preventers" />
       <h3>Backflow<br />Preventers</h3>
     </div>
-    <div class="span1-3 service-cell">
+    <div class="service-cell">
       <img src="/images/service-icons/sewer-drain.png" alt="Sewer Drain Cleaning Repairs" title="Sewer Drain Cleaning Repairs" />
       <h3>Sewer &amp; Drain<br />Cleaning &amp; Repairs</h3>
     </div>
