Footer responsive and grid margin fix

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
 
 <footer id="site-footer">
   <div class="group">
-    <div class="span1-3 payment-methods">
+    <div id="payment-methods" class="span1-3">
       <p class="small">We accept cash, check, and all major credit cards.</p>
       <div class="credit-cards">
         <i class="icon-cc-mastercard"></i>
@@ -12,13 +12,13 @@
         <i class="icon-cc-amex"></i>
       </div>
     </div>
-    <div class="span1-3">
+    <div id="license-wrap" class="span1-3">
       <div class="licensing">
         <img src="/images/licensed.png" class="license-seal">
         <img src="/images/bbb.png" class="bbb">
       </div>
     </div>
-    <div class="span1-3 footer-phone">
+    <div id="footer-phone" class="span1-3">
       <div class="desktoptel">
         {{ site.phone }}
       </div>
