--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -271,7 +271,7 @@
     position: absolute;
     text-align: center;
     top: -.75em;
-    transform: translateX(-50%);
+    @include transform(translateX(-50%));
 
     @include media-query($breakpoint-tablet) {
       padding: 20px 20px;
@@ -306,7 +306,7 @@
     padding: 1em;
     position: absolute;
     top: 50%;
-    transform: translate(-50%, -50%);
+  @include transform(translate(-50%, -50%));
     width: 140%;
     @include media-query($breakpoint-tablet) {
       font-size: 1.5em;
@@ -325,10 +325,7 @@
   i {
     font-size: 4em;
     float: left;
-    margin: 0 .5em;
-    @include media-query($breakpoint-mobile) {
-      margin: 0 .5em 5px 0;
-    }
+    margin: 0 .5em 5px 0;
   }
   .detail-text {
     float: left;
