--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,13 +6,12 @@
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-  <link rel="stylesheet" href="{{ "css/main.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "css/main.css" }}">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
-  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+  <link rel="canonical" href="{{ page.url | replace:'index.html','' }}">
 
-  <script type="text/javascript" src="/js/jquery.min.js" ></script>
+  <script type="text/javascript" src="js/jquery.min.js" ></script>
   <!--[if lt IE 9]>
-    <script src="/dist/html5shiv.js"></script>
+    <script src="dist/html5shiv.js"></script>
   <![endif]-->
 </head>
