Absolute image paths

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,8 +14,8 @@
     </div>
     <div id="license-wrap" class="span1-3">
       <div class="licensing">
-        <img src="/images/licensed.png" class="license-seal">
-        <img src="/images/bbb.png" class="bbb">
+        <img src="images/licensed.png" class="license-seal">
+        <img src="images/bbb.png" class="bbb">
       </div>
     </div>
     <div id="footer-phone" class="span1-3">
