--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
     <nav class="group main-nav-bar">
       <div class="top-nav">
         <div class="top-nav-left">
-          <img src="/images/banner.png"
+          <img src="images/banner.png"
             alt="100 years of service"
             class="banner"
             title="Linek Plumbing is celebrating 100 years of service" />
@@ -14,7 +14,7 @@
       </div>
       <div class="logo">
         <a href="{{ site.baseurl }}" class="main-nav-logo">
-          <img src="/images/logo.svg" alt="Linek Plumbing Logo" title="Linek Plumbing" />
+          <img src="images/logo.svg" alt="Linek Plumbing Logo" title="Linek Plumbing" />
         </a>
       </div>
       <a class="mobile-nav-launcher burger">
