--- a/_includes/service_areas.html
+++ b/_includes/service_areas.html
@@ -1,7 +1,7 @@
 
 <div class="group">
   <div class="span1-2">
-    <img src="/images/map.png" class="map"/>
+    <img src="images/map.png" class="map"/>
   </div>
   <div class="span1-2">
     <h1>Service Areas</h1>
